syntax = "proto2";

package sf.solana.block_meta.v1;

message PbPubkeyLayout {
  
}

message PbCreateLayout {
  repeated uint64 hashed_name = 1;
  required uint32 space = 2;
  optional uint64 expires_at = 3;
}

message PbUpdateLayout {
  repeated uint64 hashed_name = 1;
  required uint32 offset = 2;
  repeated uint64 data = 3;
}

message PbTransferLayout {
  repeated uint64 hashed_name = 1;
  required uint32 name_account_bump = 2;
  required string new_owner = 3;
}

message PbDeleteLayout {
  repeated uint64 hashed_name = 1;
  required uint32 name_account_bump = 2;
}

message PbResizeLayout {
  repeated uint64 hashed_name = 1;
  required uint32 new_size = 2;
  required uint32 name_account_bump = 3;
}

message PbExtendLayout {
  repeated uint64 hashed_name = 1;
  required uint64 expires_at = 2;
}

message PbImmutableOwnerLayout {
  repeated uint64 hashed_name = 1;
}

message Arg {
  required string instruction_type = 1;
  optional PbCreateLayout create = 2;
  optional PbUpdateLayout update = 3;
  optional PbTransferLayout transfer = 4;
  optional PbDeleteLayout delete = 5;
  optional PbResizeLayout resize = 6;
  optional PbExtendLayout extend = 7;
  optional PbImmutableOwnerLayout immutable_owner = 8;
}

message InputAccounts {
  optional string owner = 1;
  optional string payer_account = 2;
  optional string name_account = 3;
  optional string name_class_account = 4;
  optional string name_owner = 5;
  optional string parent_name_account = 6;
  optional string parent_name_owner = 7;
  optional string refund_target = 8;
  optional string system_program = 9;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}